# warp

./: .gitignore  README.md
.cargo/: config.toml
.github/workflows/: build-oss.yml
.serena/: project.yml
app/src/: app_state.rs  lib.rs
app/src/ai/: agent_conversations_model.rs
app/src/ai/agent_sdk/: driver.rs
app/src/hold_to_quit/: mod.rs
app/src/launch_configs/: launch_config.rs
app/src/pane_group/: mod.rs
app/src/pane_group/pane/: mod.rs  (+3 more)
app/src/persistence/: mod.rs  sqlite.rs  sqlite_tests.rs
app/src/remote_control/: mod.rs  server.rs  service.rs
app/src/session_memory/: mod.rs  model.rs  model_tests.rs  restore.rs  restore_tests.rs  types.rs
app/src/settings/: ai.rs  ai_tests.rs
app/src/settings_view/: ai_page.rs  features_page.rs  mod.rs
app/src/terminal/: cli_agent.rs  cli_agent_tests.rs  general_settings.rs  view.rs
app/src/workspace/: action.rs  agent_session_reader.rs  mod.rs  view.rs
crates/integration/: Cargo.toml
crates/integration/src/: test.rs
crates/persistence/src/: model.rs  schema.rs
crates/warp_features/src/: lib.rs
crates/warp_remote_control_cli/: Cargo.toml
crates/warp_remote_control_cli/src/: main.rs  protocol.rs
docs/: cli-agent-session-resume.md
docs/superpowers/plans/: 2026-05-13-cli-agent-session-resume.md  2026-07-07-session-memory-board-implementation.md  2026-07-08-transcript-markdown-lazy-virtualization.md  2026-07-09-hold-cmd-q-to-quit.md
docs/superpowers/specs/: 2026-05-13-cli-agent-session-resume-design.md  2026-07-07-session-memory-board-design.md  2026-07-09-hold-cmd-q-to-quit-design.md
(+18 files in other folders)
