[package]
name = "warp_remote_control_cli"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "warp-remote-control"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
clap = { workspace = true, features = ["derive"] }
dirs.workspace = true
interprocess = "1.2.1"
serde.workspace = true
uuid.workspace = true
